fix:corrige erro na rota deletar livro
